# llama.cpp

./: .gitignore  README.md
agent-cookiecutter-template/: README.md
agent-cookiecutter-template/scaffold/{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
chat_openai/: .gitignore  chat.py
lora_finetune/: README.md
project/: .gitignore  convert_model_to_gguf.md  convert_model_to_gguf.txt  llama.sh  openai_run.py  rag_llama_server.py  requirements.in  requirements.txt
projects/: .gitignore  convert_model_to_gguf.md  llama.sh  simple_chat.sh
rag_langchain/: .gitignore  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
rag_langchain/config/: config.yml  config_litellm.yml
rag_langchain/data/: README.md
rag_langchain/data/pgvector_data/: README.md
rag_langchain/data/qdrant_data/: README.md
rag_langchain/documents/free/: README.md
rag_langchain/evals/: README.md  read_results.ipynb
rag_langchain/logs/: README.md
rag_langchain/redis_data/: README.md
rag_langchain/src/: chunking.py  eval_mlflow.py  eval_ragas.py  evals.py  main.py  pgvector_utils.py  rag.py  services.py  strategies.py  utils.py
rag_langchain/src/chb/: __init__.py
rag_langchain/src/chb/engine/: prompt_templates.py  rag.py  rag_graph.py  strategies.py
rag_langchain/src/chb/evals/: datasets.py  eval_mlflow.py  eval_ragas.py  guidelines.py  judges.py
rag_langchain/src/chb/ingestion/: chunking.py
rag_langchain/src/chb/interfaces/: main.py
rag_langchain/src/chb/services/: services.py
rag_langchain/src/chb/utils/: clients.py  logs.py  params.py
rag_langgraph/: README.md  (+3 more)
(+33 files in other folders)
